Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71801

Emulated touch events doesn't work in WebEngine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.12.1, 5.13.0, 5.15.4
    • 5.12.0 Beta 4
    • WebEngine
    • None
    • 5fac32e6653e713f6e3e65e02e5c1b81df56c075 (qt/qtwebengine/5.12)

    Description

      Touch events have no effect. Simple pan gestures does nothing.

      Attachments

        For Gerrit Dashboard: QTBUG-71801
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes