Fix emulated touch events

Touch events now does hit-testing based on surface, so we need to
register outselves as a surface to have touch events do anything.

Fixes: QTBUG-71801
Change-Id: Iafd43dfcecf029f9c11e0c0c58a349ff38badbaa
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>